lab3/lab3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-lab3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-lab3
  template:
    metadata:
      labels:
        app: app-lab3
    spec:
      containers:
      - name: app-lab3
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
          - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-lab3
spec:
  selector:
    app: app-lab3
  ports:
    - port: 80
      protocol: TCP
      name: http
  type: NodePort
